--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
+.headshot {
   height: 40vmin;
   pointer-events: none;
 }
